[package]
name = "ktd2026-implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3"
embedded-hal = "0.2"
# provide correct local or remote path
ktd2026-led-driver = {path = "../ktd2026-led-driver/"}
# ktd2026-led-driver = {git = "ssh://git@github.com/XXXXXXXXXX/ktd2026-led-driver.git"}